# mpc

./: .gitignore  Cargo.toml  README.md  WASM_BUILD.md  build-wasm.ps1  refactoring_plan.md
.github/: copilot-instructions.md
.serena/: project.yml
.serena/memories/: architecture_patterns.md  code_style_and_conventions.md  codebase_structure.md  core_async_implementation.md  database_abstraction_implementation.md  memory_task_301_sync_job_state_machine.md  memory_task_304_2_conflict_resolution_integration.md  memory_task_304_sync_coordinator.md  memory_task_402_artwork_pipeline.md  memory_task_403_lyrics_provider.md  project_overview.md  suggested_commands.md  task1_subtask3_refactoring_complete.md  task_304_implementation_complete.md  task_402_remote_artwork_implementation.md  task_404_enrichment_job.md  task_cc1_schema_fields_completion.md  task_completion_checklist.md  task_completion_status.md  tech_stack.md  wasm_filesystem_implementation.md  wasm_sync_migration_week_nov7_2024.md
bridge-desktop/: Cargo.toml  README.md
bridge-desktop/src/: background.rs  filesystem.rs  http.rs  lib.rs  network.rs  secure_store.rs  settings.rs
bridge-traits/: Cargo.toml
bridge-traits/src/: background.rs  database.rs  error.rs  http.rs  lib.rs  network.rs  platform.rs  playback.rs  storage.rs  time.rs
bridge-wasm/: Cargo.toml  FILESYSTEM.md  IMPLEMENTATION_SUMMARY.md  README.md
bridge-wasm/examples/: filesystem_demo.rs
bridge-wasm/src/: bootstrap.rs  database.rs  error.rs  filesystem.rs  fs_adapter.rs  http.rs  lib.rs  storage.rs  wasm.rs
bridge-wasm/tests/: filesystem_tests.rs
core-async/: Cargo.toml  README.md
core-async-macros/: Cargo.toml
core-async-macros/src/: lib.rs
core-async/src/: fs.rs  io.rs  lib.rs  runtime.rs  sync.rs  task.rs  time.rs
core-async/src/wasm/: barrier.rs  cancellation_token.rs  fs.rs  mod.rs  notify.rs  runtime.rs  semaphore.rs  task.rs  watch.rs
core-async/tests/: native_tests.rs  wasm_tests.rs
core-auth/: Cargo.toml
core-auth/src/: error.rs  lib.rs  manager.rs  oauth.rs  token_store.rs  types.rs  wasm.rs
core-library/: BRIDGE_DATABASE_GUIDE.md  Cargo.toml  WASM_BUILD.md  WASM_EXPLANATION.md  bridge-db.js  build-wasm.ps1  demo.html  test-suite.html
core-library/.cargo/: config.toml
core-library/migrations/: 001_initial_schema.sql  002_add_model_fields.sql  003_add_cache_metadata.sql
core-library/src/: db.rs  error.rs  lib.rs  models.rs  query.rs  wasm.rs
core-library/src/adapters/: mod.rs  sqlite_native.rs
core-library/src/repositories/: album.rs  artist.rs  artwork.rs  cache.rs  folder.rs  lyrics.rs  mod.rs  pagination.rs  playlist.rs  track.rs
core-metadata/: Cargo.toml
core-metadata/src/: artwork.rs  enrichment_job.rs  enrichment_service.rs  error.rs  extractor.rs  lib.rs  lyrics.rs
core-metadata/src/providers/: artist_enrichment.rs  lastfm.rs  mod.rs  musicbrainz.rs
core-metadata/tests/: artist_enrichment_tests.rs  enrichment_job_tests.rs  enrichment_service_tests.rs  extraction_tests.rs
core-metadata/tests/fixtures/: README.md
core-playback/: Cargo.toml  README.md  build-wasm.ps1  demo-audio.html
core-playback/examples/: playback_demo.rs
core-playback/src/: config.rs  error.rs  lib.rs  ring_buffer.rs  streaming.rs  traits.rs  wasm.rs  wasm_unified.rs
core-playback/src/cache/: config.rs  encryption.rs  manager.rs  mod.rs  stats.rs
core-playback/src/decoder/: format_detector.rs  mod.rs  sample_converter.rs  symphonia.rs
core-playback/tests/: cache_tests.rs  streaming_tests.rs  traits_tests.rs
core-runtime/: Cargo.toml  LOGGING.md  WASM_README.md  build-wasm.ps1
core-runtime/examples/: logging_demo.rs
core-runtime/src/: config.rs  error.rs  events.rs  lib.rs  logging.rs  wasm.rs
core-runtime/tests/: logging_integration.rs
core-service/: Cargo.toml
core-service/src/: error.rs  lib.rs
core-sync/: Cargo.toml
core-sync/src/: conflict_resolution_orchestrator.rs  conflict_resolver.rs  coordinator.rs  error.rs  job.rs  lib.rs  metadata_processor.rs  repository.rs  scan_queue.rs
core-sync/tests/: incremental_sync_tests.rs
docs/: CURRENT_STATUS_AND_PLAN.md  IMPLEMENTATION_INCREMENTAL_SYNC.md  WASM_ARCHITECTURE_FINAL.md  WASM_COMPATIBILITY_ACHIEVEMENT.md  ai_task_list.md  archived_architecture_notes.md  auth-usage-guide.ts  bundle_architecture.md  code_todos_and_stubs.md  core_architecture.md  database_abstraction.md  filesystem_abstraction_pattern.md  immediate_todo.md  phase_3_4_completion_tasks.md  playback-usage-guide.ts  runtime-usage-guide.ts  to_fix_task_list.md  wasm-usage-guide.ts  wasm_architecture_plan.md  wasm_database_architecture.md  wasm_implementation_guide.md  wasm_support_status.md  wasm_sync_strategy.md  wasm_todo.md
docs/usage-guides/: auth-usage-guide.ts  library-usage-guide.ts  playback-usage-guide.ts  runtime-usage-guide.ts
provider-google-drive/: Cargo.toml
provider-google-drive/src/: connector.rs  error.rs  lib.rs  types.rs
provider-onedrive/: Cargo.toml
provider-onedrive/src/: error.rs  lib.rs
src/: lib.rs
