[workspace]
resolver = "2"
members = [
    "core-runtime",
    "core-auth",
    "core-sync",
    "core-library",
    "core-metadata",
    "core-playback",
    "provider-google-drive",
    "provider-onedrive",
    "bridge-traits",
    "bridge-desktop",
    "core-service",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Music Platform Core Contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# Crypto
sha2 = "0.10"

# Audio processing
lofty = "0.21"
symphonia = { version = "0.5", features = ["all"] }

# Image processing
image = "0.25"

# Cache
lru = "0.12"

# Security (desktop)
keyring = "3.2"

# FFI bindings
uniffi = "0.28"

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

# Testing
mockall = "0.13"

# Bytes handling
bytes = "1.7"

[workspace.features]
default = ["desktop-shims"]
desktop-shims = ["core-service/desktop-shims"]
ffi = ["core-service/ffi"]
wasm = ["core-service/wasm"]
lyrics = ["core-service/lyrics", "core-metadata/lyrics"]
artwork-remote = ["core-service/artwork-remote", "core-metadata/artwork-remote"]
offline-cache = ["core-service/offline-cache", "core-playback/offline-cache"]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
debug = false

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true
