[package]
name = "bridge-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bridge-traits = { path = "../bridge-traits" }
core-async = { path = "../core-async" }

tokio = { workspace = true, features = ["fs", "io-util"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
tokio-util = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio"] }

# Desktop-specific dependencies
reqwest = { workspace = true, features = ["stream"] }
keyring = { workspace = true, optional = true }
dirs = "5.0"
base64 = "0.22"

[features]
default = ["secure-store"]
secure-store = ["keyring"]
