[package]
name = "bridge-traits"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
