[package]
name = "bridge-traits"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core-async = { path = "../core-async" }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
