[package]
name = "core-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bridge-traits = { path = "../bridge-traits" }
core-runtime = { path = "../core-runtime" }

tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
bytes = { workspace = true }

# URL handling
url = "2.5"
# Base64 encoding for PKCE
base64 = "0.22"
# Random generation for PKCE
rand = "0.8"

[dev-dependencies]
mockall = { workspace = true }
