[package]
name = "core-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os', '--enable-bulk-memory', '--enable-nontrapping-float-to-int']

[dependencies]
bridge-traits = { path = "../bridge-traits" }
core-runtime = { path = "../core-runtime" }
core-async = { path = "../core-async" }

async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
bytes = { workspace = true }
getrandom = { workspace = true }
serde_urlencoded = "0.7"

# URL handling
url = "2.5"
# Base64 encoding for PKCE
base64 = "0.22"
# Random generation for PKCE
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bridge-wasm = { path = "../bridge-wasm" }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
once_cell = "1.20"

[dev-dependencies]
mockall = { workspace = true }

