[package]
name = "core-library"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core-runtime = { path = "../core-runtime" }
core-async = { path = "../core-async" }

async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
core-async = { path = "../core-async" }
