[package]
name = "core-library"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bridge-traits = { path = "../bridge-traits" }
core-async = { path = "../core-async" }

async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bridge-desktop = { path = "../bridge-desktop" }
sqlx = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
core-async = { path = "../core-async" }
