[package]
name = "core-library"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os', '--enable-bulk-memory', '--enable-nontrapping-float-to-int']

[dependencies]
bridge-traits = { path = "../bridge-traits" }
core-async = { path = "../core-async" }

async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
bridge-wasm = { path = "../bridge-wasm" }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde-wasm-bindgen = { workspace = true }
serde_json = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bridge-desktop = { path = "../bridge-desktop" }
sqlx = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
core-async = { path = "../core-async" }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller panic handler

[features]
default = ["console_error_panic_hook"]
wee_alloc_feature = ["wee_alloc"]
wasm-standalone = []  # Enable when building as standalone WASM (not as dependency)
