[package]
name = "core-metadata"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bridge-traits = { path = "../bridge-traits" }
core-runtime = { path = "../core-runtime" }
core-library = { path = "../core-library" }

tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
sha2 = { workspace = true }

# Audio tag extraction
lofty = { workspace = true }

# Image processing (for artwork)
image = { workspace = true }

# LRU cache for artwork
lru = { workspace = true }

# URL encoding for API requests
urlencoding = "2.1"

[features]
lyrics = []
artwork-remote = []
with-test-fixtures = []  # Enable integration tests with real audio files

[dev-dependencies]
mockall = { workspace = true }
sqlx = { workspace = true }
