[package]
name = "core-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
desktop-shims = ["bridge-desktop"]

[dependencies]
core-async = { path = "../core-async" }
tokio = { workspace = true, features = ["rt"] }  # For runtime::Handle in logging
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bridge-traits = { path = "../bridge-traits" }
bridge-desktop = { path = "../bridge-desktop", optional = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
