[package]
name = "core-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
desktop-shims = ["bridge-desktop"]

[dependencies]
core-async = { path = "../core-async" }

futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bridge-traits = { path = "../bridge-traits" }
bridge-desktop = { path = "../bridge-desktop", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-util = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
core-async = { path = "../core-async" }
