[package]
name = "core-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = []
desktop-shims = ["bridge-desktop"]
wasm-standalone = []  # Enable when building as standalone WASM (not as dependency)

[dependencies]
core-async = { path = "../core-async" }

futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bridge-traits = { path = "../bridge-traits" }
bridge-desktop = { path = "../bridge-desktop", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-util = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = "0.2"
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
tsify = "0.4"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
mockall = { workspace = true }
core-async = { path = "../core-async" }
