[package]
name = "core-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core-runtime = { path = "../core-runtime" }
core-auth = { path = "../core-auth" }
core-sync = { path = "../core-sync" }
core-library = { path = "../core-library" }
core-metadata = { path = "../core-metadata" }
core-playback = { path = "../core-playback" }
bridge-traits = { path = "../bridge-traits" }

provider-google-drive = { path = "../provider-google-drive", optional = true }
provider-onedrive = { path = "../provider-onedrive", optional = true }

core-async = { path = "../core-async" }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

# Optional FFI support
uniffi = { workspace = true, optional = true }

# Optional WASM support
wasm-bindgen = { workspace = true, optional = true }

[features]
default = ["desktop-shims"]
desktop-shims = [
    "dep:bridge-desktop",
    "dep:provider-google-drive",
    "dep:provider-onedrive",
    "core-runtime/desktop-shims",
]
ffi = ["uniffi"]
wasm = ["wasm-bindgen", "dep:bridge-wasm"]
lyrics = ["core-metadata/lyrics"]
artwork-remote = ["core-metadata/artwork-remote"]
offline-cache = ["core-playback/offline-cache"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bridge-desktop = { path = "../bridge-desktop", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bridge-wasm = { path = "../bridge-wasm", optional = true }

[dev-dependencies]
mockall = { workspace = true }
