[package]
name = "core-sync"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bridge-traits = { path = "../bridge-traits" }
core-runtime = { path = "../core-runtime" }
core-auth = { path = "../core-auth" }
core-library = { path = "../core-library" }

tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
