[package]
name = "core-sync"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bridge-traits = { path = "../bridge-traits" }
core-runtime = { path = "../core-runtime" }
core-auth = { path = "../core-auth" }
core-library = { path = "../core-library" }
core-metadata = { path = "../core-metadata" }
core-async = { path = "../core-async" }

tokio-util = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "time"] }
